--- a/faran-solution.html
+++ b/faran-solution.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Task1</title>
+    <link rel="stylesheet" href="./faran-solution.css" />
+    <title>Faran Sol Task 1</title>
   </head>
   <body>
     <div class="container">
-      <div class="box"></div>
+      <div class="box">
+        <h1>Start</h1>
+      </div>
+      <div class="box">
+        <h1>End</h1>
+      </div>
     </div>
   </body>
 </html>
